--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.10.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "date-fns": "^2.30.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.18.2",
     "qrcode.react": "^4.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
